--- a/views/admin/categoryManagement.ejs
+++ b/views/admin/categoryManagement.ejs
@@ -16,7 +16,7 @@
        <%- include('./layout/sidenav.ejs') %>
 
        <!--------------------------------------------------->
-    <div style="margin-right:130px ;" class="main-content">
+    <div  class="main-content">
         <div class="container-fluid">
             <div class="card">
                 <div class="card-header d-flex justify-content-between align-items-center">
