--- a/public/assets/css/addressManagement.css
+++ b/public/assets/css/addressManagement.css
@@ -243,4 +243,9 @@ body {
       margin-left: 0;
       margin-top: 10px;
   }
+}    .error-message {
+  color: red;
+  font-size: 16px;
+  display: block;
+  margin-bottom: 10px;
 }
